syntax = "proto3";

option csharp_namespace = "Protobuf";

package starwars;

service StarWarsGrpc {
  rpc GetPeople (GetPeopleRequest) returns (GetPeopleReply);
}

message GetPeopleRequest {
}

message GetPeopleReply {
  repeated Person results = 1;
}

message Person {
  string name = 1;
  string height = 2;
  string mass = 3;
  string birth_year = 4;
  string gender = 5;
}